--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,29 @@
 version: "3"
 
 services:
-  
+  react: 
+    container_name: react-ui
+    build: ./client
+    environment:
+      CHOKIDAR_USEPOLLING: "true"
+    volumes: 
+      - /usr/src/app/node_modules
+      - ./client:/usr/src/app
+    ports: 
+      - "3000:3000"
+    stdin_open: true
+    depends_on: 
+      - node
+
   node:
     container_name: web-service
     restart: always
     build: ./server/
     environment:
      CHOKIDAR_USEPOLLING: "true"
+    volumes: 
+      - /usr/src/app/node_modules
+      - ./server:/usr/src/app
     ports:
       - '8080:3000'
     links:
@@ -22,27 +38,3 @@ services:
       - '27017:27017' 
     volumes: 
       - ./server/mongo-volume:/data/db
-
-  react: 
-    container_name: react-ui
-    build: ./client
-    environment:
-      CHOKIDAR_USEPOLLING: "true"
-    volumes: 
-      - /usr/src/app/node_modules
-      - ./client:/usr/src/app
-    ports: 
-      - "3000:3000"
-    stdin_open: true
-    depends_on: 
-      - node
-   
-  games:
-    container_name: games-web-service
-    build: ./games/
-    environment:
-      CHOKIDAR_USEPOLLING: "true"
-    volumes:
-      - ./games:/usr/local/apache2/htdocs/
-    ports:
-      - '80:80'
