--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,26 @@
 version: "3"
 
-
 services:
   react: 
-    container_name: react-ui
+    container_name: react
     build: ./client
     environment:
       CHOKIDAR_USEPOLLING: "true"
     volumes: 
       - ./client:/usr/src/app
       - /client/node_modules
-    ports: 
-      - "3000:3000"
+    # ports: 
+    #   - "3000:3000"
     stdin_open: true
+    environment: 
+      API_URL: ${API_URL_LOCAL} 
     depends_on: 
       - node
-    networks:
-      - back
-    links: 
-      - node
+    networks: 
+      - my-net
 
   node:
-    container_name: web-service
+    container_name: node
     restart: always
     build: ./server/
     environment:
@@ -29,15 +28,13 @@ services:
     volumes: 
       - ./server:/usr/src/app
       - /server/node_modules
-    ports:
-      - '8080:3000'
-    links:
-      - db
+    # ports:
+    #   - '8080:3000'     
     depends_on: 
       - db
-    networks:
-      - back
-  
+    networks: 
+      - my-net
+
   db:
     container_name: mongodb
     image: mongo:4.2
@@ -45,8 +42,22 @@ services:
       - '27017:27017' 
     volumes: 
       - ./server/mongo-volume:/data/db
-    networks:
-      - back
+    networks: 
+      - my-net
+  
+  proxy:
+    container_name: proxy
+    image: nginx:1.19
+    ports: 
+      - ${HTTP_PORT}:${HTTP_PORT}
+      - ${HTTPS_PORT}:${HTTPS_PORT}
+    volumes: 
+      - ./proxy/:/etc/nginx/conf.d/
+    depends_on: 
+      - react
+    networks: 
+      - my-net
 
-networks:
-  back:
+networks: 
+  my-net:
+
