--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -5,25 +5,20 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
-        proxy_pass http://vue:8080/;
+        proxy_pass http://react:3000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
     }
-    location /api {
+    location /api/ {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
         proxy_pass http://node:3000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
     }
-    location /arango/ {
-        allow all;
-        proxy_set_header X-Script-Name /arango;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Host $host:$server_port;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://arango:8529/;
-    }
-    location /_db {
-        allow all;
-        proxy_pass http://arango:8529/_db;
-    }
+   
 }
