--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scroll": "^1.8.2",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
