--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
+    "page-flip": "^2.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-flip-page": "^1.6.4",
     "react-icons": "^4.2.0",
+    "react-pageflip": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.2",
