--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
+    "material-ui": "^0.20.2",
     "page-flip": "^2.0.5",
     "react": "^17.0.1",
     "react-audio-player": "^0.14.0",
