--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "antd": "^4.14.0",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "material-ui": "^0.20.2",
     "react": "^17.0.1",
     "react-audio-player": "^0.14.0",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-full-screen": "^1.0.1",
     "react-icons": "^4.2.0",
