--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,6 +1,7 @@
 server {
     listen       80;
     server_name  localhost;
+    client_max_body_size 10M;
     
     location / {
         root   /usr/share/nginx/html;
@@ -13,5 +14,6 @@ server {
     }
     location /api/ {
         proxy_pass http://node:3000/;
+       
     }
 }
