--- a/client/package.json
+++ b/client/package.json
@@ -9,20 +9,19 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
-    "antd": "^4.14.0",
     "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
     "material-ui": "^0.20.2",
     "react": "^17.0.1",
     "react-audio-player": "^0.14.0",
-    "react-bootstrap": "^1.5.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
+    "react-flip-page": "^1.6.4",
     "react-full-screen": "^1.0.1",
     "react-icons": "^4.2.0",
     "react-modal": "^3.12.1",
     "react-pageflip": "^1.0.0",
     "react-paginate": "^7.1.0",
+    "react-player": "^2.9.0",
     "react-query": "^3.13.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
