--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -14,6 +14,9 @@ server {
     }
     location /api/ {
         proxy_pass http://node:3000/;
-       
     }
+
+    # location /games-service/ {
+    #     proxy_pass http://games:8000/;
+    # }
 }
