--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.1",
     "react-flip-page": "^1.6.4",
     "react-full-screen": "^1.0.1",
+    "react-hook-form": "^7.4.0",
     "react-icons": "^4.2.0",
     "react-modal": "^3.12.1",
     "react-pageflip": "^1.0.0",
