--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.4.0",
     "@jaredreisinger/react-crossword": "^2.3.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
@@ -15,7 +16,9 @@
     "react": "^17.0.1",
     "react-audio-player": "^0.14.0",
     "react-color": "^2.19.3",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.2",
     "react-flip-page": "^1.6.4",
     "react-full-screen": "^1.0.1",
     "react-hook-form": "^7.4.0",
@@ -31,7 +34,9 @@
     "react-simple-maps": "^2.3.0",
     "react-tooltip": "^4.2.17",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "sweetalert2": "^10.16.7",
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
