--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,63 +1,29 @@
 version: "3"
 
 services:
-  react:
-    container_name: react
-    build: ./client
+  client:
+    build:
+      context: ./client
     environment:
-      CHOKIDAR_USEPOLLING: "true"
-    volumes:
-      - ./client:/usr/src/app
-      - /client/node_modules
-    # ports:
-    #   - "3000:3000"
-    stdin_open: true
-    environment:
-      API_URL: ${API_URL_LOCAL}
-    depends_on:
-      - node
-    networks:
-      - my-net
+      EXPRESS_HOST: server
 
-  node:
-    container_name: node
-    restart: always
-    build: ./server/
+  server:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+    env_file: ./server/.env
     environment:
-     CHOKIDAR_USEPOLLING: "true"
-    volumes:
-      - ./server:/usr/src/app
-      - /server/node_modules
-    # ports:
-    #   - '8080:3000'
+      HOST: 0.0.0.0
+      MONGO_HOST: mongo
     depends_on:
-      - db
-    networks:
-      - my-net
+      - mongo
 
-  db:
-    container_name: mongodb
+  mongo:
     image: mongo:4.2
     ports:
-      - '27017:27017'
+      - "127.0.0.1:27017:27017"
     volumes:
-      - ./server/mongo-volume:/data/db
+      - ./server/mongo-volume/:/data/db
       - ./.backups/mongodb/:/backups
-    networks:
-      - my-net
-
-  proxy:
-    container_name: proxy
-    image: nginx:1.19
-    ports:
-      - ${HTTP_PORT}:${HTTP_PORT}
-      - ${HTTPS_PORT}:${HTTPS_PORT}
-    volumes:
-      - ./proxy/:/etc/nginx/conf.d/
-    depends_on:
-      - react
-    networks:
-      - my-net
-
-networks:
-  my-net:
