--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -6,17 +6,9 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
-        proxy_pass http://react:3000/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
+        proxy_pass http://client:8080/;
     }
-    location /api/ {
-        proxy_pass http://node:3000/;
-    }
-
-    # location /games-service/ {
-    #     proxy_pass http://games:8000/;
+    # location /api/ {
+    #     proxy_pass http://server:5000/;
     # }
 }
