--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -6,9 +6,9 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
-        proxy_pass http://client:8080/;
+        proxy_pass http://client:3000/;
     }
-    # location /api/ {
-    #     proxy_pass http://server:5000/;
-    # }
+    location /api/ {
+        proxy_pass http://server:5000/;
+    }
 }
