--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,3 +14,6 @@ services:
       dockerfile: ./Dockerfile.prod
     environment:
       NODE_ENV: production
+    volumes:
+      - ./server:/usr/src/server
+      - /server/node_modules
