--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       context: ./client
     environment:
       EXPRESS_HOST: server
+    volumes:
+      - ./client:/usr/src/client
+      - /client/node_modules
 
   server:
     container_name: server
@@ -15,6 +18,9 @@ services:
       dockerfile: Dockerfile
     ports:
       - "5000:5000"
+    volumes:
+      - ./server:/usr/src/server
+      - /server/node_modules
     env_file: ./server/.env
     environment:
       HOST: 0.0.0.0
