--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -7,6 +7,11 @@ server {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         proxy_pass http://client:3000/;
+        
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
     }
     location /api/ {
         proxy_pass http://server:5000/;
